--- a/CasAuthenticationSample/Views/_ViewImports.cshtml
+++ b/CasAuthenticationSample/Views/_ViewImports.cshtml
@@ -1,2 +1,2 @@
 ﻿@using CasAuthenticationSample
-@addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
+@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
